--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.3",
+    "@heroicons/react": "^2.2.0",
     "firebase": "^11.7.3",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-paystack": "^6.0.0",
     "react-router-dom": "^6.27.0",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
